--- a/Front-end/src/App.css
+++ b/Front-end/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 .App-logo {
@@ -35,4 +36,236 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.titleNews{
+  padding-top: 7em;
+  color: #303030;
+}
+
+.containerNew{
+  width: 70%;
+  height: 10em;
+  background-color: white;
+  text-align-last: start;
+  color: #303030;
+  margin-bottom: 4em;
+  
+}
+
+.container{
+  width: 100%;
+    height: auto;
+    padding: 1em 0 0 0;
+    color: #303030;
+    text-align: -webkit-center;
+}
+
+.containerNew h2{
+  font-variant-caps: all-petite-caps;
+  padding-left: 4em;
+  color: #303030;
+}
+
+.containerNew button{
+  right: 0;
+  float: right;
+  margin-top: 1em;
+  background-color: transparent;
+  border: none;
+  color: #303030;
+  cursor: pointer;
+  margin-right: 5em;
+}
+
+.gridNews{
+  display: inline-flex;
+  width: 100%;
+}
+
+.gridNews img{
+  width: 4em;
+  height: 4em;
+}
+
+.gridNews span{
+  margin-left: 2em;
+  text-align: justify;
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  line-height: 1.7;
+  
+}
+
+.header {
+  width: 100%;
+  height: 17vh;
+  background-color: white;
+  padding-top: 2vh;
+  color: #303030;
+  display: grid;
+  justify-content: center;
+  position: absolute;
+  box-sizing: content-box;
+  z-index: 90;
+  top:0;
+}
+.header .logoHeader{
+  cursor: pointer;
+  width: 230px;
+  height: 79px;
+}
+.header .headerContent {
+  width: 100%;
+  display: inline-grid;
+  justify-content: space-between;
+  align-self: center;
+  flex-wrap: wrap;
+ 
+}
+
+.header .headerItems{
+  align-self: center;
+  display: inline-flex;
+}
+.header .headerbtn{
+  align-self: center;
+  padding-right: 6em;
+  display: inline-grid;
+  pointer-events: all;
+  cursor: pointer;
+}
+
+.headerNav{
+  width: 100%;
+  margin-top: 0.5em;
+}
+
+.logo {
+  position: relative;
+  left: 0;
+  width: 182px;
+  height: 70px;
+}
+
+.header .headerbtn img{
+  width: 1.5em;
+  height: 1.5em;
+  margin-left: 1em;
+  margin-inline: auto;
+}
+
+.modalNews{
+  z-index: 86;
+  width: 70%;
+  background-color: white;
+  height: 37em;
+  position: absolute;
+  top: 57%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 3em;
+  color: #303030;
+  box-shadow: 0px 3px 10px 0px #303030;
+  visibility: hidden;
+}
+
+.modalNews #text{
+  width: 84%;
+  text-align: justify;
+  margin-left: 8%;
+  margin-right: 10%;
+
+}
+
+.modalNews h1{
+  font-variant: all-small-caps;
+  font-weight: 300;
+  text-align: center;
+  margin-top: 0em;
+}
+
+.modalNews p {
+  height: 23.7em;
+  width: 98%;
+  line-height: 1.7;
+  text-align-last: auto;
+}
+
+.modalNews button{
+  margin-left: 90%;
+  margin-top: 2%;
+  border-radius: 50%;
+  font-size: larger;
+  border: none;
+  width: 40px;
+  height: 40px;
+  font-weight: unset;
+  text-align-last: center;
+  background-color: #6D2718;
+  color: white;
+
+}
+
+#footer-container{ 
+  width: 100%;
+  background: #324D51;
+  color:White;
+  border-radius: 3em 3em 0px 0;
+  margin-top: 8em;
+
+}
+
+#footer-container .copyright{
+  height: 2em;
+  width: 100%;
+  text-align-last: center;
+  font-size: smaller;
+}
+
+.footer{
+  width: 100%;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: space-evenly;
+  font-size: 14px;
+  text-align: justify;
+  height: 15em;
+  line-height: 1.5;
+}
+
+.footer h2{ 
+  text-align: center;
+
+}
+
+.footer .line{
+  margin-top: -32px;
+  text-align: center;
+  color: #9E975A;
+  font-weight: 600;
+}
+
+.footer .text{
+  margin-top: 2em;
+}
+.socialIcons{
+    font: icon;
+    position: absolute;
+    right: 8%;
+}
+.socialIcons img{
+  width: 2em;
+  margin-right: 0.4em;
+}
+
+.insImage {
+    left: 8%;
+    position: absolute;
+    width: 9em;
+    margin-top: -1%;
+    border-radius: 1em;
 }
